@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
class RegisterVehicleUI {

}
class VehicleController {
     + getVehicleByPlate(plate)
     + getVehicleBrandsList()
     + getVehicleModelsList(brand)
     + getVehicleTypesList(model)
     + saveNewVehicle(tareWeight, grossWeight, currentKm, \nregisterDate, acquisitionDate, maintenanceFrequency, \nplate, brand, model, type)
 }
class repositories {
+ getInstance()
+ getVehicleRepository()

}

class Vehicle {
    - String brand
    - String model
    - String type
    - String plate
    - double tareWeight
    - double grossWeight
    - double currentKm
    - String registerDate
    - String acquisitionDate
    - double maintenanceFrequency

    + createNewVehicle(tareWeight, grossWeight, currentKm, \nregisterDate, acquisitionDate, maintenanceFrequency, \nplate, brand, model, type)
}
class VehicleRepository {
    - List<Vehicle> vehicles

    + storeVehicle(vehicle)
    + getVehicleByPlate(plate)
    + getVehicleBrandsList()
        + getVehicleModelsList(brand)
        + getVehicleTypesList(model)
}


RegisterVehicleUI .> VehicleController
VehicleController ..> repositories

VehicleController .> VehicleRepository
VehicleRepository --> "*"Vehicle
repositories ..> VehicleRepository

@enduml